--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "node main.js",  
-    "build" : "cd client && npm run build",
-    "install-client" : "cd client && npm install",
-    "heroku-postbuild" : "npm run install-client && npm run build",
-    "client" : "cd client && npm start"
+    "start": "node main.js",
+    "build": "cd client && npm run build",
+    "install-client": "cd client && npm install",
+    "heroku-postbuild": "npm run install-client && npm run build",
+    "client": "cd client && npm start"
   },
   "author": "LaTableCarré",
   "license": "ISC",
@@ -22,8 +22,10 @@
     "express": "^4.17.1",
     "joi": "^17.2.1",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
+    "save": "^2.4.0",
     "sequelize": "^6.3.5"
   }
 }
